Fixes layout issue when multiple plugins are active. Upgraded to Inject 0.5.0. Moved libraries to a separate folder.

--- a/style/style.css
+++ b/style/style.css
@@ -245,6 +245,10 @@ div.duration ul>li>a {
 
 #addons>li {
   list-style-type: none;
+  display: block;
+  float: left;
+  clear: both;
+  margin-top: 1.5em;
 }
 
 #items.has-text>li {
